# snek

./: .gitattributes  .gitignore  .pylintrc  Makefile  README.md  TODO.md  main.py  pyproject.toml  requirements.txt  setup.py  testing.py  training.py  trainingCNN.py
.github/workflows/: build.yml
Code/: main.py  reinforcement_learning.py  simulation.py  snek.py
Paper/: artigo.tex  root.tex
paper/: root.tex
scripts/: running.py  training.py
snek/: _version.py  main.py  reinforcement_learning.py  simulation.py  snek.py
snek/learning/: __init__.py  cnn_agent.py  dql_agent.py
snek/random/: epsilon_test.py
snek/simulation/: __init__.py  agent.py  consts.py  game.py  grid.py  reward.py  score.py
